# monswitch

./: .gitignore  .projectile  Cargo.toml
src/: main.rs  system.rs
src/display/: mccs.rs  mod.rs  monitor.rs
src/gui/: app.rs
